# esp32-tcp-srv

./: CMakeLists.txt  Makefile  README.md  backup.txt  sdkconfig  sdkconfig.old
components/ctrltask/: ctrltask.c
components/ctrltask/include/: ctrltask.h
components/encode/: CMakeLists.txt  encode.c
components/encode/include/: encode.h
components/gpio/: gpio.c
components/gpio/include/: gpio.h
components/http/: CMakeLists.txt  home.c  http.c  info.c  ota_client.c  setting.c
components/http/include/: http.h
components/queue/: queue.c
components/queue/include/: queue.h
components/server/include/: server.h
components/tcp/: CMakeLists.txt  http.c  server.c
components/tcp/include/: server.h
components/uart/: uart.c
components/uart/include/: uart.h
components/usart/: CMakeLists.txt  usart.c
components/usart/include/: usart.h
components/util/: CMakeLists.txt  util.c
components/util/include/: util.h
components/wifi/: CMakeLists.txt  back.h  server.c  wifi.c
components/wifi/include/: wifi.h
main/: main.c
main/include/: main.h
